# type--

./: CMakeLists.txt  README.md
src/: headers.hpp  main.cpp  words.hpp
